Correct align-items

--- a/web/themes/custom/sand/css/organisms.css
+++ b/web/themes/custom/sand/css/organisms.css
@@ -2202,7 +2202,7 @@ textarea {
       font-size: 24px;
       text-align: center; }
   .header .header-second .tbm-link-container {
-    align-items: baseline;
+    align-items: stretch;
     background-color: #fff; }
     .header .header-second .tbm-link-container:hover, .header .header-second .tbm-link-container:focus {
       background-color: #e89e3b;
